Fix form btn on iphone+fix mailto hover footer

--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -14,10 +14,7 @@ footer {
         .author-name {
             color: white;
             transition: all .4s ease;
-            &:hover {
-                border-bottom: 1px dashed white;
-                padding-bottom: .4em;
-            }
+            &:hover,
             &:focus, 
             &:active {
                 color: $color-blue;
